--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
   <title>Connect 4 - Eldy</title>
   <link href="connect4.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Londrina+Solid:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
-
+  <h1>Connect-Four</h1>
+  <h2>Player 1 = Red and Player 2 = Blue</h2>
+  <h3>Hover on the top of the column and click to drop in slot!</h3>
   <div id="game">
     <table id="board"></table>
   </div>
